Fixed particals and Spacing issues

--- a/style.css
+++ b/style.css
@@ -5,10 +5,7 @@
 
 body,
 html {
-    /* background-image: url('/images/space.jpg');
-    background-repeat: repeat;
-    background-size: cover; */
-    height: 100%;
+    overflow: height: 100%;
     font-family: monospace;
 }
 
@@ -28,14 +25,14 @@ body {
 
 main {
     position: relative;
-    margin: auto;
-    z-index: 2;
+    z-index: 1;
+    margin-bottom: 35px;
 }
 
 .header {
     display: flex;
     justify-content: space-around;
-    background-color: rgb(50, 50, 59);
+    background: transparent;
 }
 
 .nav {
@@ -47,6 +44,10 @@ a {
     color: white;
     font-size: 20px;
     text-decoration: none;
+}
+
+a:hover {
+    box-shadow: 0 8px 16px 0 rgba(236, 7, 7, 0.781);
 }
 
 .logo {
@@ -121,17 +122,6 @@ p {
     margin-bottom: 25px;
 }
 
-.project-cards {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto;
-    row-gap: 25px;
-    column-gap: 25px;
-    width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .card-container {
     margin-left: auto;
     margin-right: auto;
@@ -145,11 +135,11 @@ p {
 
 .card {
     transition: 0.3s;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(235, 6, 6, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(236, 7, 7, 0.781);
 }
 
 img {
@@ -157,6 +147,7 @@ img {
 }
 
 .footer {
+    margin-top: 35px;
     position: fixed;
     left: 0;
     bottom: 0;
